dark mode added

--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,10 @@ a.active {
 }
 
 
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@custom-variant dark (&:where(.dark, .dark *));
+
+html,
+body,
+#root {
+  height: 100%;
+}
